src/Sk.css
.App {
    max-width: 1170px;
    width: 100%;
    margin: 0 auto;
    border-color: #808080;
    border-width: 0 0.1px;
    border-style: solid;
    text-align: center;
}

.wrapper {
  width: 110vh;
  height: 70vh;
  margin: 2rem;
}

a {
	text-decoration: none;
	color: #000;
}

/* Button begin */
.btn-primary {
	color: white;
	background-color: #414166;
	border-color: #414166;
}

.btn-primary a {
	color: white;
	text-decoration: none;
}

.btn-primary:hover {
	background-color: #1C1C2D;
}

.btn-primary:active {
	background-color: #1C1C2D !important;
}


.btn-primary:focus {
	background-color: #414166;
	border-color: #414166;
	box-shadow: 0 0 0 .2rem rgba(38,143,255,.5);
}
/* Button end */

/* Navbar begin */

.nav-logo {
  width: 100px;
}

nav.navbar {
	border: solid #AAAAAA;
    border-width: 0 0 1px 0;
}

nav.navbar .mr-auto {
    padding-bottom: 0px;
    flex: auto;
    justify-content: flex-end;
}

/* Navbar end */


/* Default-main begin */
.default{
  background: #808080;
  color: white;
  text-align: center;
  background: linear-gradient(180deg, #1C1C2D 70%, #F5F5F5 40%);
 }

.visualization-collection {
	background-color: #F5F5F5;
}

.default.container {
	margin: 0;
}

.default-content{
  display: block;
  padding: 3rem 1rem 0rem 1rem;
  text-align: center;
}

.default-content h6 {
	padding: 0.7rem 0.5rem 0 0.5rem;
}

.default-title{
  margin: 0;
}

.default-data-container {
    background-color: white;
    color: black;
    height: 20%;
    margin: 2rem 10rem 0 10rem;
	box-shadow: 0 0 0.1rem rgba(136,136,136,.2);
    padding: 2rem;
    border: lightgray 0.1px solid;
    border-radius: 10px;
}

.default-data-container p {
    text-align: right;
    margin: 0;
}

.default-svg{
  z-index: 3;
  height: 15vh;
  padding: 1rem;
}

.svg-single-bar{
  height: 3rem;
}

.list-gender-gap {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: space-around;
	text-align: center;
	padding: 1rem 1rem 0.5rem 1rem;
}

.row-viz-button {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: space-around;
	text-align: center;
	padding: 1rem 1rem 0.5rem 1rem;
	color: white;
}

.row-viz-button a {
	background-color: #414166;
}

.row-viz-button a:hover {
	background-color: #1C1C2D;
	text-decoration: none;
}

.col-button-container {
	width:33%;
	height: 16rem;
}

.col-button {
	display: flex;
	flex-flow: column;
	height:100%;
	color: #fff;
	justify-content: center;
	align-items: center;
	background-repeat: no-repeat;
	background-size: contain;
	background-position: center;
}

.col-scatterplot {
	background-image: url(assets/scatterplotButton.png);
}

.col-worldmap {
	background-image: url(assets/worldmapButton.png);
}

.col-timeseries {
	background-image: url(assets/timeseriesButton.png);
}

.row-combinesearch{
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: center;
	text-align: center;
	padding: 1rem 1rem 0.5rem 1rem;	
	width: 60%;
	margin: auto;
}

.col-combinesearch {
	text-align: left;
}

.col-combinesearch .btn-primary {
	width: 100%;
}

.combinesearch-text {
/*	width: 40%;*/
	padding-right: 1rem;
	width: 70%;
}

.combinesearch-button {
	justify-content: center;
	width: 30%;
}
/* Default-main end */

/* About begin*/
.about-main {
	padding: 0 10rem 0 10rem;
	background: white;
  	text-align: left;
}

.about-header {
	text-align: center;
}

.About-DataContainer{
  	background: white;
  	width: 70%;
}

.about-img{
  	height: 60%;
  	width: 94%;
  	position: relative;
  	margin-top: 1rem;
}

.about-content {
	padding-top: 1.2rem;
}

.about-content a {
	text-decoration: underline;
}
.note-text {
	font-size: small;
	font-weight: bold;
  }

.sub-container {
	padding-top: 3rem;
}

.row-team {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: space-around;
	text-align: center;
	padding: 1rem 0 0.5rem 0;
	color: white;
}

.row-team a {
	background-color: #fff;
	color: #000;
}

.row-team a:hover {
	text-decoration: none;
	background-color: #fffff1;
}

.col-team {
	width:24%;
	height: 6rem;
}

.col-team {
	display: flex;
	flex-flow: column;
	height:100%;
	color: #000;
	justify-content: center;
	align-items: center;
	text-align: center;
}

.col-team-img {
  width: 40%;
  position: relative;
  border-radius: 100%;

}

figcaption {
    padding-top: 0.2rem;
    font-variant: all-small-caps;
}

p.team-name {
	margin: 0;
	padding-top: 0.5rem;
	font-weight: bold;
}

p.team-title {
    margin: 0;
    font-size: 0.7rem;
    font-weight: 400;
 }

p.team-founder {
    color: cornflowerblue;
    margin: 0;
    font-size: 0.8rem;
    font-style: italic;
    font-weight: 500;
    padding-top: 0.3rem;
    padding-bottom: 1rem;
}

.about-team-more a {
    text-underline-position: under;
    text-decoration: underline;
    text-decoration-color: cornflowerblue;
}

.about-team-more a:hover {
    text-decoration: underline;
    text-decoration-color: cornflowerblue;
  }

/* About end*/

/*Visualizations Container begin*/

.view-container {
	text-align: left;
	margin-bottom: 5rem;
	padding: 2rem;
}

.view-container .nav-tabs {
	padding-top: 1rem;
}

.viz-description {
	padding-top: 2rem;
}
.viz-description p {
	font-weight: 500;
	padding-top: 0.5rem;
}
.viz-timestamp {
	font-style: italic;
}
.dob-view,.language-view .col-lg-7 {
	margin-bottom: 2rem;
	margin-left: 1rem;
}
.dob-view,.language-view .col-lg-7 .wrapper {

} 
.dob-view .col-lg-7 .wrapper {
	width: 90%;
	height: 20rem;
}

.expand-genders {
	text-align: right;
}

/*Visualizations Container end*/


/*Footer begin*/
footer {
	background-color: #3B3B3B;
	color: #AAAAAA;
	border: none; 
	margin-top: 3rem;
}

.footer-container {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	justify-content: flex-end;
	text-align: left;
	padding: 1.5rem;
	font-size: 0.8rem;
}

.footer-container a {
	color: #AAAAAA;
}

.footer-container ul{
	list-style: none;
	padding: 0;
	margin: 0;
}

.list-container {
	padding: 0.5rem;
	margin-right: 3rem;
}

.footer-copyright {
	background-color: #2F2F2F;
	padding: 1rem;
	font-size: 0.8rem;
}

.footer-copyright p {
	margin: 0;
}
/*Footer end*/

/* 
in world map component every country has .country + .unSelectedCountry and when filter selects then .country + .selectedCountry
every country is selected by default until there are filter selections 
*/
.country {

}

.selectedCountry{

}

.unSelectedCountry {
    fill: black; 
    fill-opacity: 10%;
}


@media (min-width: 1200px) {
.container, .container-lg, .container-md, .container-sm, .container-xl {
    max-width: 1170px;
    padding: 0px;
}
}

@media (min-width: 992px) {
	.navbar-expand-lg .navbar-nav .nav-link {
	    padding-bottom: 0rem;
	    padding-right: 1.5rem;
    	padding-left: 1.5rem;
	}
}

@media (max-width: 1200px) {
	.container, .container-lg, .container-md, .container-sm, .container-xl {
    	padding: 0px;
	}
	.default-data-container {
	    margin: 2rem 1rem 0 1rem;
	    padding: 1rem;
	}

	.row-combinesearch {
		width: 100%;
	}

	.col-button-container {
		width: 100%;
		padding: 1rem;
		margin: 1rem;
	}
	.col-button {
		align-items: left !important;
	}

	.about-main {
			padding: 0 2rem 0 2rem;
	}
	.col-team {
		width: 50%; 
	}
}

.api-data-btn{
	
}

